--- a/styles.css
+++ b/styles.css
@@ -7,23 +7,28 @@
 
 body {
     display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
     background-color: #ffffff;
-  margin: 0;
-  font-family: Arial, sans-serif;
+    margin: 0;
+    font-family: Arial, sans-serif;
   }
   
-
-.navbar {
-  width: 375px;
-  padding: 10px 10px;
-  display:inline-flex;
-  flex-direction: column;
-  top: 100px;
-  overflow-x: auto;
-  white-space: nowrap;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-}
+/* Navbar */
+  .navbar {
+    width: 350px;
+    padding: 20px 50px;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    height: 100vh;
+    background-color: white;
+    overflow-y: auto;
+    border-right: 1px solid #eee;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+  
 
 .navbar::-webkit-scrollbar {
   display: none;
@@ -32,7 +37,13 @@ body {
 .navbar_logo img {
   width: 40px;
   height: 40px;
+  margin-left: 10px;
+}
 
+.navbar_logo img:hover {
+  cursor: pointer;
+  background-color: rgb(239, 243, 244);
+  border-radius: 50%;
 }
 
 .navbar_links {
@@ -42,39 +53,37 @@ body {
   list-style-type: none;
 }
 
-.navbar_links ul li a {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  color: rgb(2, 2, 2);
-  padding: 12px;
-  text-decoration: none;
-  width: 100%;
-  display: block;
-  border-radius: 40px;
-}
+.navbar_links li a {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding:  0 12px;
+    color: black;
+    text-decoration: none;
+    border-radius: 40px;
+    transition: background 0.2s;
+  }
 
 .navbar_links ul {
     list-style-type: none;
     padding-left: 0; 
   }
 
-.navbar_links ul a:hover {
+
+  .navbar_links li a:hover {
   background-color: rgb(239, 243, 244);
 }
 
 .navbar_links ul li a {
     display: flex;
     align-items: center;
-    gap: 20px;
     text-decoration: none;
     color: black;
-    padding: 10px 15px;
     border-radius: 9999px;
   }
 
-  .navbar_links ul li {
-    margin: 0;
+  .navbar_links li {
+    margin-bottom: 0px;
   }
   
   .navbar_links ul li a:hover {
@@ -82,13 +91,12 @@ body {
   }
   
   .navbar-icon {
-    width: 20px;
-    height: 20px;
-    object-fit: cover;
-    margin-right: 15px;
+    width: 45px;
+    height: 45px;
+    object-fit: contain;
+    margin-bottom: 15px;
   }
   
-
 .post_button button {
   background-color: rgb(2, 2, 2);
   color: white;
@@ -101,12 +109,19 @@ body {
   margin-top: 10px;
 }
 
+.post_button button:hover {
+  background-color: rgb(23, 24, 26);
+}
+
 /* Main Layout */
 .main-container {
   display: flex;
   flex-direction: row;
-  width: 100%;
+  margin-left: 350px;
+  width: calc(100% - 350px);
   max-width: 1300px;
+  justify-content: center;
+  height: auto;
 }
 
 .main_content {
@@ -116,13 +131,17 @@ body {
 }
 
 .foryou {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 14px;
-  height: 54px;
-  border-bottom: 1px solid rgb(239, 243, 244);
-}
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    height: 54px;
+    border-bottom: 1px solid rgb(239, 243, 244);
+  }
 
 .foryou_header,
 .following {
@@ -138,14 +157,14 @@ body {
 }
 
 .post {
-    position: relative; /* Add this */
+    position: relative; 
     display: flex;
     flex-wrap: wrap;
-    align-items: flex-start; /* changed from center */
+    align-items: flex-start;
     gap: 10px;
     padding: 0 16px;
     border-bottom: 1px solid rgb(239, 243, 244);
-    height: 155px; /* Adjust height to make room for button */
+    height: 155px;
   }
 
 .profile-pic {
@@ -154,6 +173,7 @@ body {
     align-items: center;
     top: 20px;
     position: relative;
+    margin-bottom: 30px;
 }
 
 .profile-pic p a {
@@ -191,10 +211,11 @@ body {
     width: 100%;
     align-content: center;
     margin-top: 8px;
+    padding-left: 15px;
   }
 
 .posts_button button {
-  position: absolute; /* New */
+  position: absolute;
   right: 16px;
   border: none;
   background: black;
@@ -207,7 +228,7 @@ body {
 }
 
 .posts_button button:hover {
-  background-color: rgb(36, 158, 240);
+  background-color: rgb(23, 24, 26);;
 }
 
 .post_icons {
@@ -253,6 +274,8 @@ ul li img {
 .main_content {
     overflow-y: auto;
     scroll-behavior: smooth;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
 
 .main_content .hero {
@@ -311,7 +334,7 @@ ul li img {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%; /* leave space for the post button */
+    width: 100%; 
     list-style: none;
     padding: 0;
     margin: 0;
@@ -380,6 +403,10 @@ ul li img {
   border: none;
   border-radius: 25px;
   cursor: pointer;
+}
+
+.subscribe button:hover {
+  background-color: rgb(58, 124, 168);
 }
 
 .subscribe p {
