--- a/styles.css
+++ b/styles.css
@@ -422,3 +422,52 @@ ul li img {
   padding: 8px 0;
   border-bottom: 1px solid #eee;
 }
+
+/* footer */
+
+.footer {
+  width: 100%;
+  height: 50px;
+  background-color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  font-size: 14px;
+  gap: 5px;
+}
+.footer p {
+  color: #536471;
+  text-decoration: none;
+  margin: 0 5px;
+}
+.footer a {
+  color: #536471;
+  text-decoration: none;
+  margin: 0 5px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.footer a:hover {
+  text-decoration: underline;
+}
+
+.footer-links {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.footer-links a {
+  color: #536471;
+  text-decoration: none;
+}
+
+#language-select {
+  padding: 4px 8px;
+  font-size: 14px;
+  border-radius: 4px;
+  padding-bottom: 10px;
+}
